[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-stack-provider-datasetio-huggingface"
version = "0.1.0"
description = "HuggingFace datasets provider for accessing and managing datasets from the HuggingFace Hub"
authors = [{ name = "Meta Llama", email = "llama-oss@meta.com" }]
requires-python = ">=3.12"
license = { "text" = "MIT" }
dependencies = [
    "datasets",
]



[tool.setuptools.packages.find]
where = ["."]
include = ["llama_stack*"]
