[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-stack-provider-datasetio-nvidia"
version = "0.1.0"
description = "NVIDIA's dataset I/O provider for accessing datasets from NVIDIA's data platform"
authors = [{ name = "Meta Llama", email = "llama-oss@meta.com" }]
requires-python = ">=3.12"
license = { "text" = "MIT" }
dependencies = [
    "datasets",
]



[tool.setuptools.packages.find]
where = ["."]
include = ["llama_stack*"]
