[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-stack-provider-eval-nvidia"
version = "0.1.0"
description = "NVIDIA's evaluation provider for running evaluation tasks on NVIDIA's platform"
authors = [{ name = "Meta Llama", email = "llama-oss@meta.com" }]
requires-python = ">=3.12"
license = { "text" = "MIT" }
dependencies = [
    "requests",
]



[tool.setuptools.packages.find]
where = ["."]
include = ["llama_stack*"]
